SW_stub/cli/y.output
Grammar

    0 $accept: Start $end

    1 $@1: /* empty */

    2 Start: $@1 Command T_NEWLINE

    3 Command: ShowCommand
    4        | ManipCommand
    5        | ActionCommand
    6        | OptionCommand

    7 $@2: /* empty */

    8 Command: $@2 error
    9        | /* empty */

   10 ShowCommand: T_SHOW ShowType

   11 ShowType: /* empty */
   12         | T_HW ShowTypeHW
   13         | T_IP ShowTypeIP
   14         | T_OSPF ShowTypeOSPF
   15         | T_VNS ShowTypeVNS
   16         | T_OPTION ShowTypeOption
   17         | HelpOrQ

   18 ShowTypeHW: /* empty */
   19           | T_ABOUT
   20           | T_ABOUT TMIorQ
   21           | T_ARP
   22           | T_ARP TMIorQ
   23           | T_INTF
   24           | T_INTF TMIorQ
   25           | T_ROUTE
   26           | T_ROUTE TMIorQ
   27           | WrongOrQ

   28 ShowTypeIP: /* empty */
   29           | T_ARP
   30           | T_ARP TMIorQ
   31           | T_INTF
   32           | T_INTF TMIorQ
   33           | T_ROUTE
   34           | T_ROUTE TMIorQ
   35           | WrongOrQ

   36 ShowTypeOSPF: /* empty */
   37             | T_NEIGHBORS
   38             | T_NEIGHBORS TMIorQ
   39             | T_TOPOLOGY
   40             | T_TOPOLOGY TMIorQ
   41             | WrongOrQ

   42 TMIorQ: HelpOrQ

   43 $@3: /* empty */

   44 TMIorQ: $@3 error

   45 WrongOrQ: HelpOrQ

   46 $@4: /* empty */

   47 WrongOrQ: $@4 error

   48 ShowTypeVNS: /* empty */
   49            | T_LHOST
   50            | T_LHOST TMIorQ
   51            | T_SERVER
   52            | T_SERVER TMIorQ
   53            | T_TOPOLOGY
   54            | T_TOPOLOGY TMIorQ
   55            | T_USER
   56            | T_USER TMIorQ
   57            | T_VHOST
   58            | T_VHOST TMIorQ
   59            | WrongOrQ

   60 ManipCommand: T_IP ManipTypeIP

   61 ManipTypeIP: T_ARP ManipTypeIPARP
   62            | T_INTF ManipTypeIPInterface
   63            | T_OSPF ManipTypeIPOSPF
   64            | T_ROUTE ManipTypeIPRoute

   65 ManipTypeIPARP: WrongOrQ
   66               | T_ADD AddTransOrQ
   67               | T_DEL DelTransOrQ
   68               | T_PURGE
   69               | T_PURGE TMIorQ
   70               | T_PURGE T_DYNAMIC
   71               | T_PURGE T_DYNAMIC TMIorQ
   72               | T_PURGE T_STATIC
   73               | T_PURGE T_STATIC TMIorQ

   74 AddTransOrQ: HelpOrQ

   75 $@5: /* empty */

   76 AddTransOrQ: $@5 error

   77 $@6: /* empty */

   78 AddTransOrQ: TAV_IP $@6 error
   79            | TAV_IP TAV_MAC
   80            | TAV_IP TAV_MAC TMIorQ

   81 DelTransOrQ: HelpOrQ

   82 $@7: /* empty */

   83 DelTransOrQ: $@7 error
   84            | TAV_IP
   85            | TAV_IP TMIorQ

   86 ManipTypeIPInterface: HelpOrQ

   87 $@8: /* empty */

   88 ManipTypeIPInterface: $@8 error
   89                     | TAV_STR WrongOrQ

   90 $@9: /* empty */

   91 ManipTypeIPInterface: TAV_STR TAV_IP $@9 error
   92                     | TAV_STR TAV_IP TAV_IP
   93                     | TAV_STR TAV_IP TAV_IP TMIorQ
   94                     | TAV_STR T_UP
   95                     | TAV_STR T_UP TMIorQ
   96                     | TAV_STR T_DOWN
   97                     | TAV_STR T_DOWN TMIorQ

   98 ManipTypeIPOSPF: WrongOrQ
   99                | T_UP
  100                | T_UP TMIorQ
  101                | T_DOWN
  102                | T_DOWN TMIorQ

  103 ManipTypeIPRoute: WrongOrQ
  104                 | T_ADD RouteAddOrQ
  105                 | T_DEL RouteDelOrQ
  106                 | T_PURGE
  107                 | T_PURGE T_DYNAMIC
  108                 | T_PURGE T_STATIC
  109                 | T_PURGE TMIorQ

  110 RouteAddOrQ: HelpOrQ

  111 $@10: /* empty */

  112 RouteAddOrQ: $@10 error

  113 $@11: /* empty */

  114 RouteAddOrQ: TAV_IP $@11 error

  115 $@12: /* empty */

  116 RouteAddOrQ: TAV_IP TAV_IP $@12 error

  117 $@13: /* empty */

  118 RouteAddOrQ: TAV_IP TAV_IP TAV_IP $@13 error
  119            | TAV_IP TAV_IP TAV_IP TAV_STR
  120            | TAV_IP TAV_IP TAV_IP TAV_STR TMIorQ

  121 RouteDelOrQ: HelpOrQ

  122 $@14: /* empty */

  123 RouteDelOrQ: $@14 error

  124 $@15: /* empty */

  125 RouteDelOrQ: TAV_IP $@15 error
  126            | TAV_IP TAV_IP
  127            | TAV_IP TAV_IP TMIorQ

  128 ActionCommand: T_PING ActionPing
  129              | T_TRACE ActionTrace
  130              | ActionDate
  131              | ActionExit
  132              | ActionShutdown
  133              | ActionHelp

  134 ActionPing: HelpOrQ

  135 $@16: /* empty */

  136 ActionPing: $@16 error
  137           | TAV_IP
  138           | T_FLOOD TAV_IP
  139           | T_FLOOD TAV_IP TMIorQ
  140           | T_FLOOD TAV_INT TAV_IP
  141           | T_FLOOD TAV_INT TAV_IP TMIorQ
  142           | TAV_IP TMIorQ

  143 ActionTrace: HelpOrQ

  144 $@17: /* empty */

  145 ActionTrace: $@17 error
  146            | TAV_IP
  147            | TAV_IP TMIorQ

  148 ActionDate: T_DATE
  149           | T_DATE TMIorQ

  150 ActionExit: T_EXIT
  151           | T_EXIT TMIorQ

  152 ActionShutdown: T_SHUTDOWN
  153               | T_SHUTDOWN TMIorQ

  154 ActionHelp: HelpOrQ
  155           | HelpOrQ T_ALL

  156 $@18: /* empty */

  157 ActionHelp: HelpOrQ T_ALL $@18 error
  158           | HelpOrQ T_SHOW
  159           | HelpOrQ T_SHOW T_HW
  160           | HelpOrQ T_SHOW T_HW T_ABOUT
  161           | HelpOrQ T_SHOW T_HW T_ARP
  162           | HelpOrQ T_SHOW T_HW T_INTF
  163           | HelpOrQ T_SHOW T_HW T_ROUTE
  164           | HelpOrQ T_SHOW T_IP
  165           | HelpOrQ T_SHOW T_IP T_ARP
  166           | HelpOrQ T_SHOW T_IP T_INTF
  167           | HelpOrQ T_SHOW T_IP T_ROUTE
  168           | HelpOrQ T_SHOW T_OPTION
  169           | HelpOrQ T_SHOW T_OPTION T_VERBOSE
  170           | HelpOrQ T_SHOW T_OSPF
  171           | HelpOrQ T_SHOW T_OSPF T_NEIGHBORS
  172           | HelpOrQ T_SHOW T_OSPF T_TOPOLOGY
  173           | HelpOrQ T_SHOW T_VNS
  174           | HelpOrQ T_SHOW T_VNS T_LHOST
  175           | HelpOrQ T_SHOW T_VNS T_SERVER
  176           | HelpOrQ T_SHOW T_VNS T_TOPOLOGY
  177           | HelpOrQ T_SHOW T_VNS T_USER
  178           | HelpOrQ T_SHOW T_VNS T_VHOST
  179           | HelpOrQ T_IP
  180           | HelpOrQ T_IP T_ARP
  181           | HelpOrQ T_IP T_ARP T_ADD
  182           | HelpOrQ T_IP T_ARP T_DEL
  183           | HelpOrQ T_IP T_ARP T_PURGE
  184           | HelpOrQ T_IP T_ARP T_PURGE T_DYNAMIC
  185           | HelpOrQ T_IP T_ARP T_PURGE T_STATIC
  186           | HelpOrQ T_IP T_INTF
  187           | HelpOrQ T_IP T_INTF T_DOWN
  188           | HelpOrQ T_IP T_INTF T_UP
  189           | HelpOrQ T_IP T_ROUTE
  190           | HelpOrQ T_IP T_ROUTE T_ADD
  191           | HelpOrQ T_IP T_ROUTE T_DEL
  192           | HelpOrQ T_IP T_ROUTE T_PURGE
  193           | HelpOrQ T_IP T_ROUTE T_DYNAMIC
  194           | HelpOrQ T_IP T_ROUTE T_STATIC
  195           | HelpOrQ T_DATE
  196           | HelpOrQ T_EXIT
  197           | HelpOrQ T_PING
  198           | HelpOrQ T_SHUTDOWN
  199           | HelpOrQ T_TRACE
  200           | HelpOrQ T_SET
  201           | HelpOrQ T_SET T_VERBOSE
  202           | HelpOrQ T_UNSET
  203           | HelpOrQ T_UNSET T_VERBOSE

  204 $@19: /* empty */

  205 ActionHelp: HelpOrQ $@19 error

  206 HelpOrQ: T_HELP
  207        | T_QUESTION

  208 OptionCommand: OptionAction Option

  209 OptionAction: T_SET
  210             | T_UNSET

  211 Option: HelpOrQ
  212       | T_VERBOSE
  213       | T_VERBOSE TMIorQ

  214 ShowTypeOption: /* empty */
  215               | T_VERBOSE
  216               | T_VERBOSE TMIorQ
  217               | WrongOrQ


Terminals, with rules where they appear

$end (0) 0
error (256) 8 44 47 76 78 83 88 91 112 114 116 118 123 125 136 145
    157 205
T_SHOW (258) 10 158 159 160 161 162 163 164 165 166 167 168 169 170
    171 172 173 174 175 176 177 178
T_QUESTION (259) 207
T_NEWLINE (260) 2
T_ALL (261) 155 157
T_VNS (262) 15 173 174 175 176 177 178
T_USER (263) 55 56 177
T_SERVER (264) 51 52 175
T_VHOST (265) 57 58 178
T_LHOST (266) 49 50 174
T_TOPOLOGY (267) 39 40 53 54 172 176
T_IP (268) 13 60 164 165 166 167 179 180 181 182 183 184 185 186 187
    188 189 190 191 192 193 194
T_ROUTE (269) 25 26 33 34 64 163 167 189 190 191 192 193 194
T_INTF (270) 23 24 31 32 62 162 166 186 187 188
T_ARP (271) 21 22 29 30 61 161 165 180 181 182 183 184 185
T_OSPF (272) 14 63 170 171 172
T_HW (273) 12 159 160 161 162 163
T_NEIGHBORS (274) 37 38 171
T_ADD (275) 66 104 181 190
T_DEL (276) 67 105 182 191
T_UP (277) 94 95 99 100 188
T_DOWN (278) 96 97 101 102 187
T_PURGE (279) 68 69 70 71 72 73 106 107 108 109 183 184 185 192
T_STATIC (280) 72 73 108 185 194
T_DYNAMIC (281) 70 71 107 184 193
T_ABOUT (282) 19 20 160
T_PING (283) 128 197
T_TRACE (284) 129 199
T_HELP (285) 206
T_EXIT (286) 150 151 196
T_SHUTDOWN (287) 152 153 198
T_FLOOD (288) 138 139 140 141
T_SET (289) 200 201 209
T_UNSET (290) 202 203 210
T_OPTION (291) 16 168 169
T_VERBOSE (292) 169 201 203 212 213 215 216
T_DATE (293) 148 149 195
TAV_INT (294) 140 141
TAV_IP (295) 78 79 80 84 85 91 92 93 114 116 118 119 120 125 126 127
    137 138 139 140 141 142 146 147
TAV_MAC (296) 79 80
TAV_STR (297) 89 91 92 93 94 95 96 97 119 120


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Start (44)
    on left: 2, on right: 0
$@1 (45)
    on left: 1, on right: 2
Command (46)
    on left: 3 4 5 6 8 9, on right: 2
$@2 (47)
    on left: 7, on right: 8
ShowCommand (48)
    on left: 10, on right: 3
ShowType (49)
    on left: 11 12 13 14 15 16 17, on right: 10
ShowTypeHW (50)
    on left: 18 19 20 21 22 23 24 25 26 27, on right: 12
ShowTypeIP (51)
    on left: 28 29 30 31 32 33 34 35, on right: 13
ShowTypeOSPF (52)
    on left: 36 37 38 39 40 41, on right: 14
TMIorQ (53)
    on left: 42 44, on right: 20 22 24 26 30 32 34 38 40 50 52 54 56
    58 69 71 73 80 85 93 95 97 100 102 109 120 127 139 141 142 147
    149 151 153 213 216
$@3 (54)
    on left: 43, on right: 44
WrongOrQ (55)
    on left: 45 47, on right: 27 35 41 59 65 89 98 103 217
$@4 (56)
    on left: 46, on right: 47
ShowTypeVNS (57)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59, on right: 15
ManipCommand (58)
    on left: 60, on right: 4
ManipTypeIP (59)
    on left: 61 62 63 64, on right: 60
ManipTypeIPARP (60)
    on left: 65 66 67 68 69 70 71 72 73, on right: 61
AddTransOrQ (61)
    on left: 74 76 78 79 80, on right: 66
$@5 (62)
    on left: 75, on right: 76
$@6 (63)
    on left: 77, on right: 78
DelTransOrQ (64)
    on left: 81 83 84 85, on right: 67
$@7 (65)
    on left: 82, on right: 83
ManipTypeIPInterface (66)
    on left: 86 88 89 91 92 93 94 95 96 97, on right: 62
$@8 (67)
    on left: 87, on right: 88
$@9 (68)
    on left: 90, on right: 91
ManipTypeIPOSPF (69)
    on left: 98 99 100 101 102, on right: 63
ManipTypeIPRoute (70)
    on left: 103 104 105 106 107 108 109, on right: 64
RouteAddOrQ (71)
    on left: 110 112 114 116 118 119 120, on right: 104
$@10 (72)
    on left: 111, on right: 112
$@11 (73)
    on left: 113, on right: 114
$@12 (74)
    on left: 115, on right: 116
$@13 (75)
    on left: 117, on right: 118
RouteDelOrQ (76)
    on left: 121 123 125 126 127, on right: 105
$@14 (77)
    on left: 122, on right: 123
$@15 (78)
    on left: 124, on right: 125
ActionCommand (79)
    on left: 128 129 130 131 132 133, on right: 5
ActionPing (80)
    on left: 134 136 137 138 139 140 141 142, on right: 128
$@16 (81)
    on left: 135, on right: 136
ActionTrace (82)
    on left: 143 145 146 147, on right: 129
$@17 (83)
    on left: 144, on right: 145
ActionDate (84)
    on left: 148 149, on right: 130
ActionExit (85)
    on left: 150 151, on right: 131
ActionShutdown (86)
    on left: 152 153, on right: 132
ActionHelp (87)
    on left: 154 155 157 158 159 160 161 162 163 164 165 166 167 168
    169 170 171 172 173 174 175 176 177 178 179 180 181 182 183 184
    185 186 187 188 189 190 191 192 193 194 195 196 197 198 199 200
    201 202 203 205, on right: 133
$@18 (88)
    on left: 156, on right: 157
$@19 (89)
    on left: 204, on right: 205
HelpOrQ (90)
    on left: 206 207, on right: 17 42 45 74 81 86 110 121 134 143 154
    155 157 158 159 160 161 162 163 164 165 166 167 168 169 170 171
    172 173 174 175 176 177 178 179 180 181 182 183 184 185 186 187
    188 189 190 191 192 193 194 195 196 197 198 199 200 201 202 203
    205 211
OptionCommand (91)
    on left: 208, on right: 6
OptionAction (92)
    on left: 209 210, on right: 208
Option (93)
    on left: 211 212 213, on right: 208
ShowTypeOption (94)
    on left: 214 215 216 217, on right: 16


state 0

    0 $accept: . Start $end

    $default  reduce using rule 1 ($@1)

    Start  go to state 1
    $@1    go to state 2


state 1

    0 $accept: Start . $end

    $end  shift, and go to state 3


state 2

    2 Start: $@1 . Command T_NEWLINE

    T_SHOW      shift, and go to state 4
    T_QUESTION  shift, and go to state 5
    T_IP        shift, and go to state 6
    T_PING      shift, and go to state 7
    T_TRACE     shift, and go to state 8
    T_HELP      shift, and go to state 9
    T_EXIT      shift, and go to state 10
    T_SHUTDOWN  shift, and go to state 11
    T_SET       shift, and go to state 12
    T_UNSET     shift, and go to state 13
    T_DATE      shift, and go to state 14

    T_NEWLINE  reduce using rule 9 (Command)
    $default   reduce using rule 7 ($@2)

    Command         go to state 15
    $@2             go to state 16
    ShowCommand     go to state 17
    ManipCommand    go to state 18
    ActionCommand   go to state 19
    ActionDate      go to state 20
    ActionExit      go to state 21
    ActionShutdown  go to state 22
    ActionHelp      go to state 23
    HelpOrQ         go to state 24
    OptionCommand   go to state 25
    OptionAction    go to state 26


state 3

    0 $accept: Start $end .

    $default  accept


state 4

   10 ShowCommand: T_SHOW . ShowType

    T_QUESTION  shift, and go to state 5
    T_VNS       shift, and go to state 27
    T_IP        shift, and go to state 28
    T_OSPF      shift, and go to state 29
    T_HW        shift, and go to state 30
    T_HELP      shift, and go to state 9
    T_OPTION    shift, and go to state 31

    $default  reduce using rule 11 (ShowType)

    ShowType  go to state 32
    HelpOrQ   go to state 33


state 5

  207 HelpOrQ: T_QUESTION .

    $default  reduce using rule 207 (HelpOrQ)


state 6

   60 ManipCommand: T_IP . ManipTypeIP

    T_ROUTE  shift, and go to state 34
    T_INTF   shift, and go to state 35
    T_ARP    shift, and go to state 36
    T_OSPF   shift, and go to state 37

    ManipTypeIP  go to state 38


state 7

  128 ActionCommand: T_PING . ActionPing

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9
    T_FLOOD     shift, and go to state 39
    TAV_IP      shift, and go to state 40

    $default  reduce using rule 135 ($@16)

    ActionPing  go to state 41
    $@16        go to state 42
    HelpOrQ     go to state 43


state 8

  129 ActionCommand: T_TRACE . ActionTrace

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9
    TAV_IP      shift, and go to state 44

    $default  reduce using rule 144 ($@17)

    ActionTrace  go to state 45
    $@17         go to state 46
    HelpOrQ      go to state 47


state 9

  206 HelpOrQ: T_HELP .

    $default  reduce using rule 206 (HelpOrQ)


state 10

  150 ActionExit: T_EXIT .
  151           | T_EXIT . TMIorQ

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 150 (ActionExit)
    $default   reduce using rule 43 ($@3)

    TMIorQ   go to state 48
    $@3      go to state 49
    HelpOrQ  go to state 50


state 11

  152 ActionShutdown: T_SHUTDOWN .
  153               | T_SHUTDOWN . TMIorQ

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 152 (ActionShutdown)
    $default   reduce using rule 43 ($@3)

    TMIorQ   go to state 51
    $@3      go to state 49
    HelpOrQ  go to state 50


state 12

  209 OptionAction: T_SET .

    $default  reduce using rule 209 (OptionAction)


state 13

  210 OptionAction: T_UNSET .

    $default  reduce using rule 210 (OptionAction)


state 14

  148 ActionDate: T_DATE .
  149           | T_DATE . TMIorQ

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 148 (ActionDate)
    $default   reduce using rule 43 ($@3)

    TMIorQ   go to state 52
    $@3      go to state 49
    HelpOrQ  go to state 50


state 15

    2 Start: $@1 Command . T_NEWLINE

    T_NEWLINE  shift, and go to state 53


state 16

    8 Command: $@2 . error

    error  shift, and go to state 54


state 17

    3 Command: ShowCommand .

    $default  reduce using rule 3 (Command)


state 18

    4 Command: ManipCommand .

    $default  reduce using rule 4 (Command)


state 19

    5 Command: ActionCommand .

    $default  reduce using rule 5 (Command)


state 20

  130 ActionCommand: ActionDate .

    $default  reduce using rule 130 (ActionCommand)


state 21

  131 ActionCommand: ActionExit .

    $default  reduce using rule 131 (ActionCommand)


state 22

  132 ActionCommand: ActionShutdown .

    $default  reduce using rule 132 (ActionCommand)


state 23

  133 ActionCommand: ActionHelp .

    $default  reduce using rule 133 (ActionCommand)


state 24

  154 ActionHelp: HelpOrQ .
  155           | HelpOrQ . T_ALL
  157           | HelpOrQ . T_ALL $@18 error
  158           | HelpOrQ . T_SHOW
  159           | HelpOrQ . T_SHOW T_HW
  160           | HelpOrQ . T_SHOW T_HW T_ABOUT
  161           | HelpOrQ . T_SHOW T_HW T_ARP
  162           | HelpOrQ . T_SHOW T_HW T_INTF
  163           | HelpOrQ . T_SHOW T_HW T_ROUTE
  164           | HelpOrQ . T_SHOW T_IP
  165           | HelpOrQ . T_SHOW T_IP T_ARP
  166           | HelpOrQ . T_SHOW T_IP T_INTF
  167           | HelpOrQ . T_SHOW T_IP T_ROUTE
  168           | HelpOrQ . T_SHOW T_OPTION
  169           | HelpOrQ . T_SHOW T_OPTION T_VERBOSE
  170           | HelpOrQ . T_SHOW T_OSPF
  171           | HelpOrQ . T_SHOW T_OSPF T_NEIGHBORS
  172           | HelpOrQ . T_SHOW T_OSPF T_TOPOLOGY
  173           | HelpOrQ . T_SHOW T_VNS
  174           | HelpOrQ . T_SHOW T_VNS T_LHOST
  175           | HelpOrQ . T_SHOW T_VNS T_SERVER
  176           | HelpOrQ . T_SHOW T_VNS T_TOPOLOGY
  177           | HelpOrQ . T_SHOW T_VNS T_USER
  178           | HelpOrQ . T_SHOW T_VNS T_VHOST
  179           | HelpOrQ . T_IP
  180           | HelpOrQ . T_IP T_ARP
  181           | HelpOrQ . T_IP T_ARP T_ADD
  182           | HelpOrQ . T_IP T_ARP T_DEL
  183           | HelpOrQ . T_IP T_ARP T_PURGE
  184           | HelpOrQ . T_IP T_ARP T_PURGE T_DYNAMIC
  185           | HelpOrQ . T_IP T_ARP T_PURGE T_STATIC
  186           | HelpOrQ . T_IP T_INTF
  187           | HelpOrQ . T_IP T_INTF T_DOWN
  188           | HelpOrQ . T_IP T_INTF T_UP
  189           | HelpOrQ . T_IP T_ROUTE
  190           | HelpOrQ . T_IP T_ROUTE T_ADD
  191           | HelpOrQ . T_IP T_ROUTE T_DEL
  192           | HelpOrQ . T_IP T_ROUTE T_PURGE
  193           | HelpOrQ . T_IP T_ROUTE T_DYNAMIC
  194           | HelpOrQ . T_IP T_ROUTE T_STATIC
  195           | HelpOrQ . T_DATE
  196           | HelpOrQ . T_EXIT
  197           | HelpOrQ . T_PING
  198           | HelpOrQ . T_SHUTDOWN
  199           | HelpOrQ . T_TRACE
  200           | HelpOrQ . T_SET
  201           | HelpOrQ . T_SET T_VERBOSE
  202           | HelpOrQ . T_UNSET
  203           | HelpOrQ . T_UNSET T_VERBOSE
  205           | HelpOrQ . $@19 error

    T_SHOW      shift, and go to state 55
    T_ALL       shift, and go to state 56
    T_IP        shift, and go to state 57
    T_PING      shift, and go to state 58
    T_TRACE     shift, and go to state 59
    T_EXIT      shift, and go to state 60
    T_SHUTDOWN  shift, and go to state 61
    T_SET       shift, and go to state 62
    T_UNSET     shift, and go to state 63
    T_DATE      shift, and go to state 64

    error     reduce using rule 204 ($@19)
    $default  reduce using rule 154 (ActionHelp)

    $@19  go to state 65


state 25

    6 Command: OptionCommand .

    $default  reduce using rule 6 (Command)


state 26

  208 OptionCommand: OptionAction . Option

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9
    T_VERBOSE   shift, and go to state 66

    HelpOrQ  go to state 67
    Option   go to state 68


state 27

   15 ShowType: T_VNS . ShowTypeVNS

    T_QUESTION  shift, and go to state 5
    T_USER      shift, and go to state 69
    T_SERVER    shift, and go to state 70
    T_VHOST     shift, and go to state 71
    T_LHOST     shift, and go to state 72
    T_TOPOLOGY  shift, and go to state 73
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 48 (ShowTypeVNS)
    $default   reduce using rule 46 ($@4)

    WrongOrQ     go to state 74
    $@4          go to state 75
    ShowTypeVNS  go to state 76
    HelpOrQ      go to state 77


state 28

   13 ShowType: T_IP . ShowTypeIP

    T_QUESTION  shift, and go to state 5
    T_ROUTE     shift, and go to state 78
    T_INTF      shift, and go to state 79
    T_ARP       shift, and go to state 80
    T_HELP      shift, and go to state 9

    error     reduce using rule 46 ($@4)
    $default  reduce using rule 28 (ShowTypeIP)

    ShowTypeIP  go to state 81
    WrongOrQ    go to state 82
    $@4         go to state 75
    HelpOrQ     go to state 77


state 29

   14 ShowType: T_OSPF . ShowTypeOSPF

    T_QUESTION   shift, and go to state 5
    T_TOPOLOGY   shift, and go to state 83
    T_NEIGHBORS  shift, and go to state 84
    T_HELP       shift, and go to state 9

    error     reduce using rule 46 ($@4)
    $default  reduce using rule 36 (ShowTypeOSPF)

    ShowTypeOSPF  go to state 85
    WrongOrQ      go to state 86
    $@4           go to state 75
    HelpOrQ       go to state 77


state 30

   12 ShowType: T_HW . ShowTypeHW

    T_QUESTION  shift, and go to state 5
    T_ROUTE     shift, and go to state 87
    T_INTF      shift, and go to state 88
    T_ARP       shift, and go to state 89
    T_ABOUT     shift, and go to state 90
    T_HELP      shift, and go to state 9

    error     reduce using rule 46 ($@4)
    $default  reduce using rule 18 (ShowTypeHW)

    ShowTypeHW  go to state 91
    WrongOrQ    go to state 92
    $@4         go to state 75
    HelpOrQ     go to state 77


state 31

   16 ShowType: T_OPTION . ShowTypeOption

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9
    T_VERBOSE   shift, and go to state 93

    T_NEWLINE  reduce using rule 214 (ShowTypeOption)
    $default   reduce using rule 46 ($@4)

    WrongOrQ        go to state 94
    $@4             go to state 75
    HelpOrQ         go to state 77
    ShowTypeOption  go to state 95


state 32

   10 ShowCommand: T_SHOW ShowType .

    $default  reduce using rule 10 (ShowCommand)


state 33

   17 ShowType: HelpOrQ .

    $default  reduce using rule 17 (ShowType)


state 34

   64 ManipTypeIP: T_ROUTE . ManipTypeIPRoute

    T_QUESTION  shift, and go to state 5
    T_ADD       shift, and go to state 96
    T_DEL       shift, and go to state 97
    T_PURGE     shift, and go to state 98
    T_HELP      shift, and go to state 9

    $default  reduce using rule 46 ($@4)

    WrongOrQ          go to state 99
    $@4               go to state 75
    ManipTypeIPRoute  go to state 100
    HelpOrQ           go to state 77


state 35

   62 ManipTypeIP: T_INTF . ManipTypeIPInterface

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9
    TAV_STR     shift, and go to state 101

    $default  reduce using rule 87 ($@8)

    ManipTypeIPInterface  go to state 102
    $@8                   go to state 103
    HelpOrQ               go to state 104


state 36

   61 ManipTypeIP: T_ARP . ManipTypeIPARP

    T_QUESTION  shift, and go to state 5
    T_ADD       shift, and go to state 105
    T_DEL       shift, and go to state 106
    T_PURGE     shift, and go to state 107
    T_HELP      shift, and go to state 9

    $default  reduce using rule 46 ($@4)

    WrongOrQ        go to state 108
    $@4             go to state 75
    ManipTypeIPARP  go to state 109
    HelpOrQ         go to state 77


state 37

   63 ManipTypeIP: T_OSPF . ManipTypeIPOSPF

    T_QUESTION  shift, and go to state 5
    T_UP        shift, and go to state 110
    T_DOWN      shift, and go to state 111
    T_HELP      shift, and go to state 9

    $default  reduce using rule 46 ($@4)

    WrongOrQ         go to state 112
    $@4              go to state 75
    ManipTypeIPOSPF  go to state 113
    HelpOrQ          go to state 77


state 38

   60 ManipCommand: T_IP ManipTypeIP .

    $default  reduce using rule 60 (ManipCommand)


state 39

  138 ActionPing: T_FLOOD . TAV_IP
  139           | T_FLOOD . TAV_IP TMIorQ
  140           | T_FLOOD . TAV_INT TAV_IP
  141           | T_FLOOD . TAV_INT TAV_IP TMIorQ

    TAV_INT  shift, and go to state 114
    TAV_IP   shift, and go to state 115


state 40

  137 ActionPing: TAV_IP .
  142           | TAV_IP . TMIorQ

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 137 (ActionPing)
    $default   reduce using rule 43 ($@3)

    TMIorQ   go to state 116
    $@3      go to state 49
    HelpOrQ  go to state 50


state 41

  128 ActionCommand: T_PING ActionPing .

    $default  reduce using rule 128 (ActionCommand)


state 42

  136 ActionPing: $@16 . error

    error  shift, and go to state 117


state 43

  134 ActionPing: HelpOrQ .

    $default  reduce using rule 134 (ActionPing)


state 44

  146 ActionTrace: TAV_IP .
  147            | TAV_IP . TMIorQ

    T_QUESTION  shift, and go to state 5
    T_HELP      shift, and go to state 9

    T_NEWLINE  reduce using rule 146 (ActionTrace)
    $default   reduce using rule 43 ($@3)

    TMIorQ   go to state 118
    $@3      go to state 49
    HelpOrQ  go to state 50


state 45

  129 ActionCommand: T_TRACE ActionTrace .

    $default  reduce using rule 129 (ActionCommand)


state 46

  145 ActionTrace: $@17 . error

    error  shift, and go to state 119


state 47

  143 ActionTrace: HelpOrQ .

    $default  reduce using rule 143 (ActionTrace)


state 48

  151 ActionExit: T_EXIT TMIorQ .

    $default  reduce using rule 151 (ActionExit)


state 49

   44 TMIorQ: $@3 . error

    error  shift, and go to state 120


state 50

   42 TMIorQ: HelpOrQ .

    $default  reduce using rule 42 (TMIorQ)


state 51

  153 ActionShutdown: T_SHUTDOWN TMIorQ .

    $default  reduce using rule 153 (ActionShutdown)


state 52

  149 ActionDate: T_DATE TMIorQ .

    $default  reduce using rule 149 (ActionDate)


state 53

    2 Start: $@1 Command T_NEWLINE .

    $default  reduce using rule 2 (Start)


state 54

    8 Command: $@2 error .

    $default  reduce using rule 8 (Command)


state 55

  158 ActionHelp: HelpOrQ T_SHOW .
  159           | HelpOrQ T_SHOW . T_HW
  160           | HelpOrQ T_SHOW . T_HW T_ABOUT
  161           | HelpOrQ T_SHOW . T_HW T_ARP
  162           | HelpOrQ T_SHOW . T_HW T_INTF
  163           | HelpOrQ T_SHOW . T_HW T_ROUTE
  164           | HelpOrQ T_SHOW . T_IP
  165           | HelpOrQ T_SHOW . T_IP T_ARP
  166           | HelpOrQ T_SHOW . T_IP T_INTF
  167           | HelpOrQ T_SHOW . T_IP T_ROUTE
  168           | HelpOrQ T_SHOW . T_OPTION
  169           | HelpOrQ T_SHOW . T_OPTION T_VERBOSE
  170           | HelpOrQ T_SHOW . T_OSPF
  171           | HelpOrQ T_SHOW . T_OSPF T_NEIGHBORS
  172           | HelpOrQ T_SHOW . T_OSPF T_TOPOLOGY
  173           | HelpOrQ T_SHOW . T_VNS
  174           | HelpOrQ T_SHOW . T_VNS T_LHOST
  175           | HelpOrQ T_SHOW . T_VNS T_SERVER
  176           | HelpOrQ T_SHOW . T_VNS T_TOPOLOGY
  177           | HelpOrQ T_SHOW . T_VNS T_USER
  178           | HelpOrQ T_SHOW . T_VNS T_VHOST

    T_VNS     shift, and go to state 121
    T_IP      shift, and go to state 122
    T_OSPF    shift, and go to state 123
    T_HW      shift, and go to state 124
    T_OPTION  shift, and go to state 125

    $default  reduce using rule 158 (ActionHelp)


state 56

  155 ActionHelp: HelpOrQ T_ALL .
  157           | HelpOrQ T_ALL . $@18 error

    error     reduce using rule 156 ($@18)
    $default  reduce using rule 155 (ActionHelp)

    $@18  go to state 126


state 57
